# cmake_framework

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: main.cpp
cmake/: bootstrap.cmake  ccache.cmake  gcc.cmake  gold.cmake  options.cmake  sanitizers.cmake  warnings.cmake  werror.cmake
src/app/sanitizer_detector/: main.cpp
src/sanitizer/address/issue/: collection.cpp  collection.hpp
src/sanitizer/undefined/issue/: collection.cpp  collection.hpp
src/uni/asan/: collection.cpp
src/uni/tsan/: collection.cpp  collection.hpp
src/uni/ubsan/: collection.cpp  collection.hpp
